--- a/src/components/About.css
+++ b/src/components/About.css
@@ -49,6 +49,9 @@
     .about {
         gap: 2rem;
     }
+        .about_left .about_img {
+            margin-top: 3rem;
+        }
         .about_right .about_title {
             font-size: 3.2rem;
         }
@@ -58,7 +61,7 @@
     .about {
         flex-direction: column;
         text-align: center;
-        padding: 8rem 5% 5rem;
+        padding: 10rem 5% 5rem;
         gap: 0rem;
     } 
 
@@ -71,22 +74,27 @@
             text-align: center;
             font-size: 3rem;
         }
-        .about_right p {
-            text-align: center;
-            margin: 2rem 0 1.5rem;
-        }
+            .about_right p {
+                text-align: center;
+                margin: 2rem 0 1.5rem;
+            }
 }
 
 @media (max-width: 500px) {
     .about {
-        padding: 6rem 3% 5rem;
+        padding: 0rem 4% 0rem;
     }
-        .about_left {
+        .about_left, .about_right {
             width: 100%;
+            flex: none;
         }
-        .about_left .about_img {
-            width: 100%;
-        }
+            .about_left .about_img {
+                max-width: 100%;
+                height: 100%;
+                min-width: 100%;
+                margin-top: 0rem;
+            }
+
         .about_right h3 {
             font-size: 1.8rem;
         }
